fix: increase modal z-index so it doesn't get cut off by sticky header

--- a/src/components/ui/custom-modal/custom-modal.module.css
+++ b/src/components/ui/custom-modal/custom-modal.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 20;
+  z-index: 45;
   background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black for darkening */
   backdrop-filter: blur(5px);
   cursor: default;
@@ -14,7 +14,7 @@
   position: fixed;
   overflow-y: auto;
   background-color: white;
-  z-index: 30;
+  z-index: 50;
 }
 
 /*--BOTTOM--*/
